nodeport-service.yaml
apiVersion: v1 
kind: Service
metadata:
  name: trans-svc
spec:
  selector:
    app: trans
  ports:
  - port: 3001
    targetPort: 3000
    protocol: TCP 
  type: NodePort
