service.yaml
apiVersion: v1 
kind: Service 
metadata: 
  name: app-deployment-svc 
spec: 
  selector:
    app: oracle
  ports:
    - name: oracle-web 
      protocol: TCP 
      port: 82
      targetPort: 80 
    - name: trans-svc 
      protocol: TCP 
      port: 83 
      targetPort: 80 
  type: LoadBalancer
