ingress.yaml
# Install Nginx Controller 
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.2.1/deploy/static/provider/cloud/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx 
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/oracle-test(/|$)(.*)"
        backend:
          service:
            name: app-deployment-svc
            port: 
              number: 82
      - pathType: Prefix
        path: /(.*)
        backend:
          service:
            name: app-deployment-svc
            port: 
              number: 82
